--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "sprouts",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "build:tailwind": "tailwindcss -i ./src/input.css -o ./public/output.css --watch"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "devDependencies": {
     "tailwindcss": "^3.4.6"
   }
